--- a/WEB Coding-4/question1.html
+++ b/WEB Coding-4/question1.html
@@ -3,13 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Pokemon DashBoard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+            padding: 20px;
+        }
+        h1{
+            font-size: 2rem;
+            margin-bottom: 40px;
+        }
+        #search {
+            width: 100%;
+            padding: 5px;
+            margin-bottom: 10px;
+        }
+        #typeFilter{
+            margin-bottom: 15px;
+        }
+        #pokemonContainer{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: start;
+        }
+        .pokemon-card{
+            border: 1px solid #f8f9fa;
+            border-radius: 5px;
+            padding: 10px;
+            width: 150px;
+            background-color: white;
+            box-shadow: 0px 4px 6px;
+        }
+        .pokemon-card img{
+            width: auto;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Pokémon Information Portal</h1>
-        <input type="text" id="search" placeholder="Search Pokémon by name">
+        <h1>Pokemon Information Portal</h1>
+        <input type="text" id="search" placeholder="Search Pokemon by name">
         <div id="filters">
             <select id="typeFilter">
                 <option value="">Filter by Type</option>
@@ -17,6 +61,75 @@
         </div>
         <div id="pokemonContainer"></div>
     </div>
-    <script src="script.js"></script>
 </body>
+<script>
+    let container = document.getElementById('pokemonContainer')
+    let pokemonSearch = document.getElementById('search')
+    let filterType = document.getElementById('typeFilter')
+
+    async function getData(){
+        let res = await fetch("https://pokeapi.co/api/v2/pokemon?limit=150")
+        let myData = await res.json()
+        let pokemonList = myData.results
+
+        displayPokemon(pokemonList)    
+    }
+
+    async function getType() {
+        let res = await fetch('https://pokeapi.co/api/v2/type/')
+        let typeData = await res.json()
+
+        populateTypeFilter(typeData.results)
+    }
+
+    function displayPokemon(pokemonList) {
+        pokemonContainer.innerHTML = ''
+        pokemonList.forEach(async(pokemon) => {
+            let pokemonDetails = await fetch(pokemon.url).then((res) => res.json())
+            let { id, name , types, sprites} = pokemonDetails
+
+            let div = document.createElement('div')
+            div.classList.add('pokemon-card')
+
+            div.innerHTML = `
+            <img src ="${sprites.front_default}" alt = "${name}">
+            <h3>${name}</h3>
+            <p>Type: ${types.map(t => t.type.name).join(", ")}</p>
+            `;
+            pokemonContainer.appendChild(div)
+        })
+    }
+
+    function populateTypeFilter(types){
+        types.forEach(type => {
+            let option = document.createElement('option')
+            option.value = type.name
+            option.textContent = type.name
+            filterType.appendChild(option)
+        })
+    }
+
+    pokemonSearch.addEventListener('input', ()=>{
+        let searchTerm = pokemonSearch.value.toLowerCase()
+        Array.from(pokemonContainer.children).forEach(card => {
+            let name = card.querySelector('h3').textContent.toLowerCase()
+            card.style.display = name.includes(searchTerm) ? "" : 'none'
+        })
+    })
+
+    filterType.addEventListener('change', async () => {
+        let selectedType = filterType.value
+        if(!selectedType){
+            getData()
+            return
+        }
+
+        let res = await fetch(`https://pokeapi.co/api/v2/type/${selectedType}`)
+        let data = await res.json()
+        displayPokemon(data.pokemon.map(p => p.pokemon))
+    })
+
+    getType()
+    getData()
+</script>
 </html>
